--- a/Celendar/style.css
+++ b/Celendar/style.css
@@ -237,8 +237,11 @@ ion-icon[name="notifications-circle-outline"] {
     width: 70%;
     height: 99%;
     display: flex;
+    flex-direction: column;
     position: relative;
     flex-basis: 75%;
+    overflow: hidden;
+
 }
 
 .right_maincontent{
@@ -251,7 +254,293 @@ ion-icon[name="notifications-circle-outline"] {
 
 /* Css cho maincontent */
 
+.maincontent_top{
+    display: flex;
+    position: relative;
+    width: 50%;
+    height: 10%;
+    align-items: center;
+    margin: 0 1rem;
+    grid-gap: 10%;
+    margin-bottom: 2%;
 
+}
+
+.maincontent_body{
+    display: flex;
+    position: relative;
+    width: 100%;
+    height: 93%;
+  
+}
+
+.maincontent_left{
+    display: flex;
+    position: relative;
+    width: 50%;
+    height: 100%;
+    flex-direction: column;
+    margin: 0 1rem;
+    flex-basis: 50%;
+    justify-content: center;
+    align-items: center;
+    background: #EEECE9;
+    border-radius: 20px;
+}
+
+
+.maincontent_right{
+    position: relative;
+    border-radius: 10px;
+    flex-basis: 50%;
+    flex-direction: column;
+    width: 100%;
+    height: 93%;
+    display: flex;
+    overflow: hidden;
+}
+
+/* Css cho maincontent_top */
+
+.search{
+    width: 50%;
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+    position: relative;
+
+
+}
+
+.search-input{
+    width: 100%;
+    height: 2.5rem;
+    text-align: left;
+    border-radius: 10px;
+    border: 1px solid #513820;
+    padding: 0 3rem 0 1rem;
+ 
+ }
+ 
+ ion-icon[name="search-outline"] {
+    position: absolute;
+    right: 5%;
+    font-size: 1.5rem;
+    color: #513820;
+    font-weight: 100;
+  
+ }
+
+
+.maincontent_top .btn_addworkshift{
+    background-color: #513820;
+    color: #F7F7F7;
+    height: 80%;
+    width: 30%;
+    border-radius: 10px;
+    cursor: pointer;
+
+}
+
+.maincontent_top .btn_addworkshift:hover{
+    opacity: 0.3;
+
+}
+/* Css cho maincontent_left */
+
+
+.wrapper{
+    width: 90%;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 15px 40px rgba(0,0,0,0.12);
+  }
+  .wrapper header{
+    display: flex;
+    align-items: center;
+    padding: 25px 30px 10px;
+    justify-content: space-between;
+  }
+  header .icons{
+    display: flex;
+  }
+  header .icons span{
+    height: 38px;
+    width: 38px;
+    margin: 0 1px;
+    cursor: pointer;
+    color: #878787;
+    text-align: center;
+    line-height: 38px;
+    font-size: 1.9rem;
+    user-select: none;
+    border-radius: 50%;
+  }
+  .icons span:last-child{
+    margin-right: -10px;
+  }
+  header .icons span:hover{
+    background: #f2f2f2;
+  }
+  header .current-date{
+    font-size: 1.45rem;
+    font-weight: 500;
+  }
+  .calendar{
+    padding: 20px;
+  }
+  .calendar ul{
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    text-align: center;
+  }
+  .calendar .days{
+    margin-bottom: 20px;
+  }
+  .calendar li{
+    color: #333;
+    width: calc(100% / 7);
+    font-size: 1.07rem;
+  }
+  .calendar .weeks li{
+    font-weight: 500;
+    cursor: default;
+  }
+  .calendar .days li{
+    z-index: 1;
+    cursor: pointer;
+    position: relative;
+    margin-top: 30px;
+  }
+  .days li.inactive{
+    color: #aaa;
+  }
+  .days li.active{
+    color: #fff;
+    background: none;
+  }
+  .days li::before{
+    position: absolute;
+    content: "";
+    left: 50%;
+    top: 50%;
+    height: 40px;
+    width: 40px;
+    z-index: -1;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .days li.active::before{
+    background: #FFCB83;
+  }
+  .days li:not(.active):hover::before{
+    background: #f2f2f2;
+  }
+
+/* Css cho maincontent_right */
+
+.staffcelander_titile {
+    width: 98%;
+    position: relative;
+}
+
+.staffcelander_titile h2{
+    font-size: 1rem;
+    font-weight: 600;
+    width: 100%;
+    color: #513820;
+    border-bottom: 1px solid #A79B8F;
+    padding: 0 0.3rem 0.3rem
+}
+
+.staffcelander_content{
+    height: 17%;
+    display: flex;
+    padding: 0 1rem;
+    width: 98%;
+    justify-content: space-around;
+    border-bottom: 1px solid #A79B8F;
+    align-items: center;
+    color: #A79B8F;
+}
+
+.staffcelander_list{
+    overflow: auto;
+    width: 103%;
+    position: relative;
+
+}
+
+.work_item{
+    display: flex;
+    padding: 1rem 1rem;
+    justify-content: space-around;
+    position: relative;
+    color: #513820;
+    font-weight: 600;
+    align-items: center;
+
+}
+
+.shift{
+    position: relative;
+    flex-basis: 20%;
+    left: 5%;
+
+}
+
+.daywork{
+    position: relative;
+    flex-basis: 20%;
+    right: 5%;
+
+}
+
+.staffnumber{
+    position: relative;
+    flex-basis: 60%;
+}
+
+.staffworkshift_inf{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-gap: 0.5rem;
+   right: 3%;
+}
+
+.staffava{
+    position: relative;
+    display: flex;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    overflow: hidden;
+    cursor: pointer;
+    right: 10%;
+
+}
+
+.staffava img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.daywork{
+    position: relative;
+    right: 3%;
+}
+
+.work_item .staffnumber{
+    position: relative;
+    right: 5%;
+}
 
 
 
@@ -287,6 +576,7 @@ ion-icon[name="notifications-circle-outline"] {
 .order .title_mini {
     width: 100%;
     position: relative;
+    color: #E9E6E3;
 }
 
 .ordpending_stock{
@@ -314,11 +604,12 @@ ion-icon[name="notifications-circle-outline"] {
 /* Css cho titile_mini */
 
 .title_mini h2{
-    font-size: 1.2rem;
-    font-weight: 300;
+    font-size: 1rem;
+    font-weight: 500;
     width: 85%;
-    border-bottom: 1px solid #513820;
+    border-bottom: 1px solid #D8D5CF;
     padding: 0.3rem 0;
+    color: #A79B8F;
 }
 
 /* Css cho ordpending_stock */
@@ -338,15 +629,22 @@ ion-icon[name="notifications-circle-outline"] {
 
 .item{
     display: flex;
-    margin-top: 2%;
+    margin-bottom: 1%;
     position: relative;
-    grid-gap: 2rem;
+    grid-gap: 1rem;
+    border: 1px solid;
+    padding: 0.2rem;
+    border-radius: 5px;
+    height: 100%;
+    border: 1px solid #513820; ;
+
 } 
 
 .item .itm-confirmbtn{
     display: flex;
     flex-direction: column;
-    grid-gap: 10px;
+    grid-gap: 2%;
+    border:none;
 
 }
 
@@ -355,10 +653,11 @@ ion-icon[name="notifications-circle-outline"] {
     width: 80px;
     height: 50px;
     border-radius: 10px;
-    border:1px solid #513820;
+    border:1px solid #D8D5CF;
     font-size: 0.8rem;
     justify-content: center;
     align-items: center;
+
   
      
 }
@@ -378,19 +677,25 @@ ion-icon[name="notifications-circle-outline"] {
 .item .itm-detail{
     display: flex;
     flex-direction: column;
-    grid-gap: 0.5rem;
+    grid-gap: 0.1rem;
     font-size: 0.8rem;
+    border:none;
+    height: 84%;
+
 }
 
 .itm-daycreate{
     display: flex;
     grid-gap: 0.3rem;
+    border:none;
+
 
 }
 
 .itm-status{
     grid-gap: 0.3rem;
     display: flex;
+    border:none;
 
 }
 
@@ -405,6 +710,9 @@ ion-icon[name="notifications-circle-outline"] {
 .itm-staffcreate{
     grid-gap: 0.3rem;
     display: flex;
+    width: 175%;
+    border:none;
+
 }
 
 .icon_arrow{
@@ -429,11 +737,13 @@ ion-icon[name="arrow-forward-outline"]:hover{
 /* Css cho tiltle_mini__Cus  */
 
 .title_mini__Cus .title_mini {
-    font-size: 1.2rem;
-    font-weight: 300;
+    font-size: 1rem;
+    font-weight: 500;
     width: 85%;
-    border-bottom: 1px solid #513820;
+    border-bottom: 1px solid #D8D5CF;
     padding: 0.3rem 0;
+    color: #A79B8F;
+
 }
 
 /* Ordcontent_customer */
